Name:                Random123
Version:             0.1.0
Synopsis:            Haskell port of Random123 library
Homepage:            http://github.com/Manticore/haskell-random123
License:             MIT
License-file:        LICENSE
Author:              Bogdan Opanchuk <bogdan@opanchuk.net>
Maintainer:          Bogdan Opanchuk <bogdan@opanchuk.net>

Category:            Random
Build-type:          Simple
Cabal-version:       >=1.2

Extra-source-files:
  examples/*.hs

Library
  Exposed-modules:
    System.Random.Random123

  Build-Depends:
    base >= 4.4.0.0,
    containers >= 0.4.0.0,
    array >= 0.4.0.0
