Name:                Random123
Version:             0.1.0
Synopsis:            Haskell port of Random123 library
Homepage:            http://github.com/Manticore/haskell-random123
License:             MIT
License-file:        LICENSE
Author:              Bogdan Opanchuk <bogdan@opanchuk.net>
Maintainer:          Bogdan Opanchuk <bogdan@opanchuk.net>

Category:            Random
Build-type:          Simple
Cabal-version:       >=1.8

Extra-source-files:
  examples/*.hs

Library
  Exposed-modules:
    System.Random.Random123
    System.Random.Random123.Misc
    System.Random.Random123.Threefry
    System.Random.Random123.Philox
    System.Random.Random123.Types
    System.Random.Random123.RandomGen

  Build-Depends:
    base >= 4.4.0.0 && < 5.0,
    array >= 0.4,
    random >= 1.0.0.0

Test-Suite test
  Type: exitcode-stdio-1.0
  Hs-source-dirs: test
  Main-is: test.hs
  Other-modules: TestPhilox TestThreefry TestRandomGen TestTypeclasses
  Build-depends:
    base >= 4.4 && < 5.0,
    random >= 1.0,
    test-framework >= 0.8,
    test-framework-hunit >= 0.3,
    test-framework-quickcheck2 >= 0.3,
    HUnit >= 1.2,
    QuickCheck >= 2.5,
    Random123

Benchmark test_perf
  Type: exitcode-stdio-1.0
  Hs-source-dirs: test
  Main-is: test_perf.hs
  Build-depends:
    base >= 4.4 && < 5.0,
    random >= 1.0,
    criterion >= 0.6,
    Random123
  Ghc-options: -O2
